# customspotify

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
hook/: CMakeLists.txt
hook/src/: display.h  main.cpp  ntdll.h  state.h
hook/src/hook/: browser.cpp  browser.h  hook.cpp  hook.h  renderer.cpp  renderer.h
hook/src/include/: cef_pack_resources.h  cef_pack_strings.h  cef_version.h  v8context.h
src/: main.cpp  resources.qrc  startup.cpp  startup.h
src/loader/: eventsink.cpp  eventsink.h  loader.cpp  loader.h  ntdll.h
src/script/: script.cpp  script.h  scriptmanager.cpp  scriptmanager.h
src/theme/: theme.h
src/windows/: MainWindow.cpp  MainWindow.h  MainWindow.ui  ScriptWidget.cpp  ScriptWidget.h  ScriptWidget.ui
